--- a/index.html
+++ b/index.html
@@ -51,36 +51,7 @@
         <div class="card mt-3">
             <table class="table">
                 <tbody id="item-list">
-                    <tr>
-                        <td>1</td>
-                        <td>Monitor</td>
-                        <td>100 £</td>
-                        <td class="text-right">
-                            <button type="submit" class="btn btn-warning btn-sm">
-                                <i class="fas fa-edit"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Monitor</td>
-                        <td>100 £</td>
-                        <td class="text-right">
-                            <button type="submit" class="btn btn-warning btn-sm">
-                                <i class="fas fa-edit"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Monitor</td>
-                        <td>100 £</td>
-                        <td class="text-right">
-                            <button type="submit" class="btn btn-warning btn-sm">
-                                <i class="fas fa-edit"></i>
-                            </button>
-                        </td>
-                    </tr>
+
                 </tbody>
             </table>
         </div>
@@ -97,6 +68,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
