--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="name" placeholder="Name">
+                            <input id="productName" type="text" class="form-control" id="name" placeholder="Name">
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="price" placeholder="Price">
+                            <input id="productPrice" type="text" class="form-control" id="price" placeholder="Price">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-sm">
+                    <button type="submit" class="btn btn-primary btn-sm addBtn">
                         <i class="fas fa-plus"> Add</i>
                     </button>
                     <button type="submit" class="btn btn-warning btn-sm">
@@ -48,7 +48,7 @@
                 </form>
             </div>
         </div>
-        <div class="card mt-3">
+        <div id="productCard" class="card mt-3">
             <table class="table">
                 <tbody id="item-list">
 
