CRUD operations completed

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                     <button type="submit" class="btn btn-primary btn-sm addBtn">
                         <i class="fas fa-plus"> Add</i>
                     </button>
-                    <button type="submit" class="btn btn-warning btn-sm">
+                    <button type="submit" class="btn btn-warning btn-sm updateBtn">
                         <i class="far fa-edit"> Save Changes</i>
                     </button>
-                    <button type="submit" class="btn btn-danger btn-sm">
+                    <button type="submit" class="btn btn-danger btn-sm deleteBtn">
                         <i class="fas fa-trash"> Delete</i>
                     </button>
-                    <button type="submit" class="btn btn-secondary btn-sm">
+                    <button type="submit" class="btn btn-secondary btn-sm cancelBtn">
                         <i class="fas fa-arrow-circle-left"> Cancel</i>
                     </button>
                 </form>
@@ -57,8 +57,8 @@
         </div>
         <div class="card mt-3">
             <div class="card-footer text-right">
-                <p>TOTAL (₺) <strong>300 ₺</strong></p>
-                <p>TOTAL (£) <strong>300 £</strong></p>
+                <p>TOTAL (₺): <strong><span id="total-tl"></span> ₺</strong></p>
+                <p>TOTAL (£): <strong><span id="total-pound"></span> £</strong></p>
             </div>
         </div>
     </div>
